package dmRender;

import "ddf/ddf_extensions.proto";

option java_package = "com.dynamo.render.proto";
option java_outer_classname = "Font";
option (ddf_java_package) = "com.dynamo.render.ddf";

message FontDesc
{
    required string Font = 1;
    required string VertexProgram = 2;
    required string FragmentProgram = 3;
}

message ImageFont
{
    message Glyph
    {
        required uint32 X = 1;
        required uint32 Y = 2;
        required uint32 Width = 3;
        required uint32 Height = 4;
        required int32  YOffset = 5;
        required int32  LeftBearing = 6;
        required int32  RightBearing = 7;
    }

    repeated Glyph Glyphs = 1;
    required uint32 ImageWidth = 3;
    required uint32 ImageHeight = 4;
    required bytes ImageData = 2;
}
